--- a/lines-app/package.json
+++ b/lines-app/package.json
@@ -1,7 +1,8 @@
 {
   "name": "lines-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "packageManager": "pnpm@10.19.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,7 +17,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
-    "next": "15.0.0",
+    "next": "^15.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "zod": "^3.23.0"
@@ -27,7 +28,7 @@
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^9.0.0",
-    "eslint-config-next": "15.0.0",
+    "eslint-config-next": "^15.1.0",
     "prettier": "^3.3.0",
     "prisma": "^6.1.0",
     "typescript": "^5.6.0",
