fix: add postinstall prisma generate and typecheck step in CI pipeline

--- a/lines-app/package.json
+++ b/lines-app/package.json
@@ -8,12 +8,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "typecheck": "tsc --noEmit",
     "test": "vitest",
     "test:unit": "vitest --config vitest.config.unit.ts",
     "test:integration": "vitest --config vitest.config.integration.ts",
     "test:e2e": "vitest --config vitest.config.e2e.ts",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
+    "postinstall": "prisma generate",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
