--- a/lines-app/package.json
+++ b/lines-app/package.json
@@ -15,11 +15,11 @@
     "test:e2e": "vitest --config vitest.config.e2e.ts",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "postinstall": "prisma generate",
+    "postinstall": "dotenv -e .env.local -- prisma generate || prisma generate",
     "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:seed": "tsx prisma/seed.ts",
+    "db:push": "dotenv -e .env.local -- prisma db push",
+    "db:migrate": "dotenv -e .env.local -- prisma migrate dev",
+    "db:seed": "dotenv -e .env.local -- tsx prisma/seed.ts",
     "db:test": "tsx scripts/test-db-connection.ts",
     "db:studio": "prisma studio"
   },
@@ -43,11 +43,14 @@
     "autoprefixer": "^10.4.22",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-env": "^10.1.0",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.1.0",
     "postcss": "^8.5.6",
     "prettier": "^3.3.0",
     "prisma": "^6.1.0",
+    "supabase": "^2.65.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.18",
     "tailwindcss-animate": "^1.0.7",
