--- a/lines-app/package.json
+++ b/lines-app/package.json
@@ -43,12 +43,18 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "bcryptjs": "^3.0.3",
+    "framer-motion": "^12.23.25",
+    "konva": "^10.0.12",
     "lucide-react": "^0.555.0",
     "next": "^15.1.0",
     "next-auth": "5.0.0-beta.30",
     "react": "19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.0.0",
-    "zod": "^3.23.0"
+    "react-konva": "^19.2.1",
+    "zod": "^3.23.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
