--- a/lines-app/package.json
+++ b/lines-app/package.json
@@ -44,6 +44,8 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "bcryptjs": "^3.0.3",
     "framer-motion": "^12.23.25",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "konva": "^10.0.12",
     "lucide-react": "^0.555.0",
     "next": "^15.1.0",
