--- a/lines-app/.eslintrc.json
+++ b/lines-app/.eslintrc.json
@@ -3,9 +3,13 @@
   "rules": {
     "no-console": ["warn", { "allow": ["warn", "error"] }],
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_"
+      }
+    ],
     "prefer-const": "error",
     "no-var": "error"
   }
 }
-
