feat(venue-map): simplify interface with Simple Mode and BETA badge
- Add BETA badge to venue map page
- Implement Simple Mode (default) with minimal toolbar
- Add Advanced Mode toggle for full features
- Update translations for simple mode messages
- Update documentation with Simple Mode details

Simple Mode provides:
- Only essential buttons: Templates and Add Element
- Clean, uncluttered interface
- Easy switching to Advanced Mode
- Perfect for users of all technical levels

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 .vercel
+
+# Cursor workspace config (may contain sensitive MCP server configs)
+.cursor/mcp.json
+
+# Environment variables
+.env
+.env.local
+.env.*.local
