--- a/lines-app/package.json
+++ b/lines-app/package.json
@@ -28,7 +28,8 @@
     "db:test-user": "dotenv -e .env.local -- tsx scripts/create-test-user.ts",
     "db:e2e-venue": "dotenv -e .env.local -- tsx scripts/create-e2e-venue.ts",
     "db:test": "tsx scripts/test-db-connection.ts",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:make-admin": "dotenv -e .env.local -- tsx scripts/make-user-admin.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
