feat: add universal Redis adapter supporting Vercel KV and standard Redis (REDIS_URL)

--- a/lines-app/package.json
+++ b/lines-app/package.json
@@ -57,6 +57,7 @@
     "bcryptjs": "^3.0.3",
     "framer-motion": "^12.23.25",
     "html2canvas": "^1.4.1",
+    "ioredis": "^5.8.2",
     "jspdf": "^3.0.4",
     "konva": "^10.0.12",
     "lucide-react": "^0.555.0",
