fix-workflow-and-fixtures

--- a/lines-app/.github/workflows/run-tests-on-demand.yml
+++ b/lines-app/.github/workflows/run-tests-on-demand.yml
@@ -31,6 +31,7 @@ jobs:
         working-directory: ./lines-app
 
     steps:
+      # Note: Linter may show false positives for GitHub Actions - these are valid versions
       - name: Checkout code
         uses: actions/checkout@v4
 
