fix: improve workflow with proper test execution and result parsing - Remove cache-dependency-path to fix cache resolution error - Add Playwright browser installation for E2E tests - Add proper JSON test result parsing for unit/integration/E2E - Improve webhook payload with actual test results - Use continue-on-error to ensure all tests run

--- a/.github/workflows/run-tests-on-demand.yml
+++ b/.github/workflows/run-tests-on-demand.yml
@@ -44,7 +44,6 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: "pnpm"
-          cache-dependency-path: lines-app/pnpm-lock.yaml
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -54,88 +53,254 @@ jobs:
         env:
           POSTGRES_PRISMA_URL: ${{ secrets.POSTGRES_PRISMA_URL }}
 
+      - name: Install Playwright browsers
+        if: ${{ inputs.test_type == 'e2e' || inputs.test_type == 'all' }}
+        run: pnpm exec playwright install --with-deps chromium
+
       - name: Run Unit Tests
         if: ${{ inputs.test_type == 'unit' || inputs.test_type == 'all' }}
-        run: pnpm test:unit
+        id: run_unit_tests
         continue-on-error: true
+        run: |
+          pnpm test:unit --reporter=json --outputFile=test-results-unit.json || true
+        env:
+          NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL || 'https://lines-app.vercel.app' }}
 
       - name: Run Integration Tests
         if: ${{ inputs.test_type == 'integration' || inputs.test_type == 'all' }}
-        run: pnpm test:integration
+        id: run_integration_tests
         continue-on-error: true
+        run: |
+          pnpm test:integration --reporter=json --outputFile=test-results-integration.json || true
+        env:
+          NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL || 'https://lines-app.vercel.app' }}
 
       - name: Run E2E Tests
         if: ${{ inputs.test_type == 'e2e' || inputs.test_type == 'all' }}
-        run: pnpm test:e2e
-        env:
-          BASE_URL: ${{ secrets.BASE_URL || 'https://lines-app.vercel.app' }}
-        continue-on-error: true
-
-      - name: Parse Test Results
-        id: parse-results
+        id: run_e2e_tests
         continue-on-error: true
         run: |
-          echo "run_id=${{ inputs.run_id }}" >> $GITHUB_OUTPUT
-          echo "test_type=${{ inputs.test_type }}" >> $GITHUB_OUTPUT
-          
-          # Try to parse test results if test report files exist
-          # This is a placeholder - adjust based on your test runner output format
-          if [ -f "test-results.json" ]; then
-            echo "has_results=true" >> $GITHUB_OUTPUT
-            echo "results=$(cat test-results.json | base64 -w 0)" >> $GITHUB_OUTPUT
+          pnpm test:e2e:production --reporter=json || true
+        env:
+          NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL || 'https://lines-app.vercel.app' }}
+
+      - name: Parse Test Results
+        id: parse_results
+        if: always()
+        continue-on-error: true
+        run: |
+          node << 'EOF'
+          const fs = require('fs');
+          const path = require('path');
+
+          const testType = process.env.TEST_TYPE;
+          let allResults = [];
+          let total = 0;
+          let passed = 0;
+          let failed = 0;
+          let skipped = 0;
+          let totalDuration = 0;
+
+          // Parse unit tests
+          if (testType === 'unit' || testType === 'all') {
+            try {
+              const unitFile = path.join(process.cwd(), 'test-results-unit.json');
+              if (fs.existsSync(unitFile)) {
+                const unitData = JSON.parse(fs.readFileSync(unitFile, 'utf8'));
+                if (unitData.testResults) {
+                  unitData.testResults.forEach(file => {
+                    file.assertionResults?.forEach(test => {
+                      allResults.push({
+                        testFile: file.name,
+                        testName: test.fullName || test.title,
+                        status: test.status === 'passed' ? 'passed' : test.status === 'failed' ? 'failed' : 'skipped',
+                        duration: test.duration,
+                        error: test.failureMessages && test.failureMessages.length > 0 ? {
+                          message: test.failureMessages[0],
+                          stack: test.failureMessages.join('\n')
+                        } : undefined
+                      });
+                      total++;
+                      if (test.status === 'passed') passed++;
+                      else if (test.status === 'failed') failed++;
+                      else skipped++;
+                      if (test.duration) totalDuration += test.duration;
+                    });
+                  });
+                }
+              }
+            } catch (e) {
+              console.error('Error parsing unit tests:', e);
+            }
+          }
+
+          // Parse integration tests
+          if (testType === 'integration' || testType === 'all') {
+            try {
+              const intFile = path.join(process.cwd(), 'test-results-integration.json');
+              if (fs.existsSync(intFile)) {
+                const intData = JSON.parse(fs.readFileSync(intFile, 'utf8'));
+                if (intData.testResults) {
+                  intData.testResults.forEach(file => {
+                    file.assertionResults?.forEach(test => {
+                      allResults.push({
+                        testFile: file.name,
+                        testName: test.fullName || test.title,
+                        status: test.status === 'passed' ? 'passed' : test.status === 'failed' ? 'failed' : 'skipped',
+                        duration: test.duration,
+                        error: test.failureMessages && test.failureMessages.length > 0 ? {
+                          message: test.failureMessages[0],
+                          stack: test.failureMessages.join('\n')
+                        } : undefined
+                      });
+                      total++;
+                      if (test.status === 'passed') passed++;
+                      else if (test.status === 'failed') failed++;
+                      else skipped++;
+                      if (test.duration) totalDuration += test.duration;
+                    });
+                  });
+                }
+              }
+            } catch (e) {
+              console.error('Error parsing integration tests:', e);
+            }
+          }
+
+          // Parse E2E tests (Playwright JSON format)
+          if (testType === 'e2e' || testType === 'all') {
+            try {
+              const e2eFile = path.join(process.cwd(), 'playwright-report', 'results.json');
+              if (fs.existsSync(e2eFile)) {
+                const e2eData = JSON.parse(fs.readFileSync(e2eFile, 'utf8'));
+                if (e2eData.suites) {
+                  e2eData.suites.forEach(suite => {
+                    suite.specs?.forEach(spec => {
+                      spec.tests?.forEach(test => {
+                        const results = test.results || [];
+                        const lastResult = results[results.length - 1];
+                        allResults.push({
+                          testFile: spec.file || 'unknown',
+                          testName: spec.title || test.title,
+                          status: lastResult?.status === 'passed' ? 'passed' : lastResult?.status === 'failed' ? 'failed' : 'skipped',
+                          duration: lastResult?.duration,
+                          error: lastResult?.error ? {
+                            message: lastResult.error.message,
+                            stack: lastResult.error.stack
+                          } : undefined
+                        });
+                        total++;
+                        if (lastResult?.status === 'passed') passed++;
+                        else if (lastResult?.status === 'failed') failed++;
+                        else skipped++;
+                        if (lastResult?.duration) totalDuration += lastResult.duration;
+                      });
+                    });
+                  });
+                }
+              }
+            } catch (e) {
+              console.error('Error parsing E2E tests:', e);
+            }
+          }
+
+          const results = {
+            total,
+            passed,
+            failed,
+            skipped,
+            duration: Math.round(totalDuration),
+            results: allResults
+          };
+
+          fs.writeFileSync('parsed-test-results.json', JSON.stringify(results, null, 2));
+          console.log('Parsed test results:', JSON.stringify(results));
+
+          // Set GitHub outputs
+          console.log(`::set-output name=total::${total}`);
+          console.log(`::set-output name=passed::${passed}`);
+          console.log(`::set-output name=failed::${failed}`);
+          console.log(`::set-output name=skipped::${skipped}`);
+          console.log(`::set-output name=duration::${Math.round(totalDuration)}`);
+          EOF
+        env:
+          TEST_TYPE: ${{ inputs.test_type }}
+
+      - name: Read Parsed Results
+        id: results
+        if: always()
+        run: |
+          if [ -f parsed-test-results.json ]; then
+            RESULTS=$(cat parsed-test-results.json)
+            echo "results<<EOF" >> $GITHUB_OUTPUT
+            echo "$RESULTS" >> $GITHUB_OUTPUT
+            echo "EOF" >> $GITHUB_OUTPUT
           else
-            echo "has_results=false" >> $GITHUB_OUTPUT
+            echo "results={}" >> $GITHUB_OUTPUT
           fi
 
       - name: Send Results to Webhook
         if: always()
         run: |
+          RUN_ID="${{ inputs.run_id }}"
           WEBHOOK_URL="${{ secrets.WEBHOOK_URL }}"
           WEBHOOK_SECRET="${{ secrets.WEBHOOK_SECRET }}"
-          RUN_ID="${{ inputs.run_id }}"
-          TEST_TYPE="${{ inputs.test_type }}"
-          
-          if [ -z "$WEBHOOK_URL" ]; then
-            echo "Warning: WEBHOOK_URL secret not set, skipping webhook call"
+
+          if [ -z "$WEBHOOK_URL" ] || [ -z "$WEBHOOK_SECRET" ]; then
+            echo "Warning: WEBHOOK_URL or WEBHOOK_SECRET not set, skipping webhook call"
             exit 0
           fi
-          
-          # Create payload
-          STATUS="completed"
-          if [ "${{ job.status }}" == "failure" ]; then
-            STATUS="failed"
+
+          TEST_TYPE="${{ inputs.test_type }}"
+          STATUS="${{ job.status }}"
+
+          # Determine final status
+          if [ "$STATUS" == "success" ]; then
+            FINAL_STATUS="completed"
+          elif [ "$STATUS" == "failure" ] || [ "$STATUS" == "cancelled" ]; then
+            FINAL_STATUS="failed"
+          else
+            FINAL_STATUS="completed"
           fi
-          
+
+          # Create test suite result
+          STARTED_AT=$(date -u +"%Y-%m-%dT%H:%M:%S.000Z")
+          COMPLETED_AT=$(date -u +"%Y-%m-%dT%H:%M:%S.000Z")
+
+          RESULTS_JSON='{}'
+          if [ -f parsed-test-results.json ]; then
+            RESULTS_JSON=$(cat parsed-test-results.json)
+          fi
+
+          TOTAL=$(echo "$RESULTS_JSON" | jq -r '.total // 0')
+          PASSED=$(echo "$RESULTS_JSON" | jq -r '.passed // 0')
+          FAILED=$(echo "$RESULTS_JSON" | jq -r '.failed // 0')
+          SKIPPED=$(echo "$RESULTS_JSON" | jq -r '.skipped // 0')
+          DURATION=$(echo "$RESULTS_JSON" | jq -r '.duration // 0')
+          TEST_RESULTS=$(echo "$RESULTS_JSON" | jq -r '.results // []')
+
           PAYLOAD=$(cat <<EOF
           {
             "runId": "${RUN_ID}",
-            "testType": "${TEST_TYPE}",
-            "status": "${STATUS}",
-            "startedAt": "${{ github.event.head_commit.timestamp || github.event.repository.pushed_at || github.event.repository.updated_at }}",
-            "completedAt": "$(date -u +%Y-%m-%dT%H:%M:%SZ)",
-            "workflowRunId": ${{ github.run_id }},
-            "workflowRunUrl": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
-            "results": {
-              "total": 0,
-              "passed": 0,
-              "failed": 0,
-              "skipped": 0,
-              "duration": 0,
-              "suites": []
+            "testResults": {
+              "runId": "${RUN_ID}",
+              "testType": "${TEST_TYPE}",
+              "status": "${FINAL_STATUS}",
+              "startedAt": "${STARTED_AT}",
+              "completedAt": "${COMPLETED_AT}",
+              "total": ${TOTAL},
+              "passed": ${PASSED},
+              "failed": ${FAILED},
+              "skipped": ${SKIPPED},
+              "duration": ${DURATION},
+              "results": ${TEST_RESULTS},
+              "markdown": ""
             }
           }
           EOF
           )
-          
-          # Calculate HMAC signature
-          SIGNATURE=$(echo -n "$PAYLOAD" | openssl dgst -sha256 -hmac "$WEBHOOK_SECRET" | sed 's/^.* //')
-          
-          # Send to webhook
+
           curl -X POST "$WEBHOOK_URL" \
             -H "Content-Type: application/json" \
-            -H "X-Webhook-Signature: $SIGNATURE" \
-            -d "$PAYLOAD" \
-            --fail-with-body || echo "Warning: Webhook call failed"
-          
-          echo "Results sent to webhook"
-
+            -H "Authorization: Bearer $WEBHOOK_SECRET" \
+            -d "$PAYLOAD" || echo "Warning: Webhook call failed"
