--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
 
+env:
+  NODE_VERSION: "22.x"
+  PNPM_VERSION: "10.19.0"
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -18,19 +22,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "24"
+          node-version: ${{ env.NODE_VERSION }}
           cache: "pnpm"
           # Ensure cache uses the app's pnpm lockfile inside the monorepo
           cache-dependency-path: lines-app/pnpm-lock.yaml
 
-      - name: Enable corepack (pnpm)
-        run: corepack enable
-
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       - name: Lint
         run: pnpm lint
